--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ certifi==2021.5.30
 cffi==1.14.6
 Django==3.2.7
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+install==1.3.4
 psycopg2==2.9.1
 pycparser==2.20
-PyJWT==1.7.1
+PyJWT==2.1.0
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.2
