--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,7 +1,7 @@
 FROM python:3.8
 ENV PYTHONUNBUFFERED=1
 WORKDIR  /usr/src/app
-COPY ../requirements.txt /usr/src/app
+COPY requirements.txt /usr/src/app
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends \
     gcc libgraphviz-dev
