--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,17 @@ boto3==1.18.45
 botocore==1.21.45
 certifi==2021.5.30
 cffi==1.14.6
+dj-static==0.0.6
 Django==3.2.7
 django-filter==2.4.0
 django-storages==1.11.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 filetype==1.0.7
+gunicorn==20.1.0
 install==1.3.4
 jmespath==0.10.0
+mysqlclient==2.0.3
 psycopg2==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
@@ -20,4 +23,5 @@ pytz==2021.1
 s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
+static3==0.7.0
 urllib3==1.26.6
